--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                   <p><b>Publications</b></p>
                   <ul>
                     <li> "Perfect Accuracy with Human-in-the-Loop Object Detection" (R Brenner, J Priyadarshi, L Itti), European Conference on Computer Vision, 2016</li>
+                    <li> "SemEval-2017 Task 9: Abstract Meaning Representation Parsing and Generation", (J. May, J. Priyadarshi), Proc. SemEval, 2017</li>
                   </ul>
                   <p><b>Contact Me</b>: jpriyada [at] usc [dot] edu, jaypriyadarshi0903 [at] gmail [dot] com
                 </div>
