--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <!-- Nav tabs -->
             <ul class="nav nav-pills" role="tablist">
               <li role="presentation" class="active"><a href="#About" aria-controls="About" role="tab" data-toggle="tab">About</a></li>
-              <li role="presentation"><a href="Jay_Priyadarshi-Resume.pdf" target="_blank">Resume</a></li>
+              <li role="presentation"><a href="Jay_Priyadarshi-Resume_Research.pdf" target="_blank">Resume</a></li>
               <li role="presentation"><a href="https://www.linkedin.com/in/jaypriyadarshi" target="_blank">LinkedIn</a></li>
               <li role="presentation"><a href="https://github.com/jaypriyadarshi" target="_blank">GitHub</a></li>
             </ul>
@@ -73,7 +73,7 @@
                   <p> I am working with <a href="http://ilab.usc.edu/itti/" target="_blank">Dr. Laurent Itti</a> at <a href="http://ilab.usc.edu/" target="_blank">iLab</a> (USC), where I work on various Computer Vision tasks.</p>
                   <p> I am also working with <a href="http://www.isi.edu/~knight/" target="_blank">Dr. Kevin Knight</a> in the <a href="http://www.isi.edu/research_groups/nlg/home" target="_blank">Natural Language Group</a> at <a href="http://www.isi.edu/home" target="_blank">Information Sciences Institute</a>.</p>  
                   <br/>
-                  <p> Here is my <a href="Jay_Priyadarshi-Resume.pdf" title="Link to My Resume" target="_blank">Resume</a>.
+                  <p> Here is my <a href="Jay_Priyadarshi-Resume_Research.pdf" title="Link to My Resume" target="_blank">Resume</a>.
                   <br/>
                   <br/>
                   <p><b>Publications</b></p>
