--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   <img src="profile-pic.png">
                 </div>
                 <div id="profileText">
-                  <p>I am a research scientist at <a href="https://specif.io/">Specifio</a>. Prior to joining <a href="https://specif.io/">Specifio</a>, I recevied my M.S. in Computer Science at the <a href="http://www.usc.edu/" target="_blank">University of Southern California</a>, Los Angeles. Before joining USC, I earned a B.Tech in Computer Science from National Institute of Technology, Karnataka in 2015.</p>
+                  <p>I am a Senior Software Development Engineer at Amazon.com. Prior to joining Amazon, I was a research scientist at <a href="https://specif.io/">Specifio</a>. I recevied my M.S. in Computer Science at the <a href="http://www.usc.edu/" target="_blank">University of Southern California</a>, Los Angeles. Before joining USC, I earned a B.Tech in Computer Science from National Institute of Technology, Karnataka in 2015.</p>
                   <p>My main interests lie in the field of Artificial Intelligence and solving difficult problems using various <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank">Machine Learning</a> techniques. I also love developing fun and entertaining applications.<a href="https://www.youtube.com/watch?v=wENPED7kCsE&list=PLe_uOr8nxZ3uzGncXC66hxlRq4K2lR4Ng&index=1" target="_blank"> Here</a> is something interesting I developed this summer. I <a href="http://basicmachinelearning.blogspot.com/" target="_blank">blog</a> too.</p>
                   <p> During my time at USC I worked with <a href="http://ilab.usc.edu/itti/" target="_blank">Dr. Laurent Itti</a> at <a href="http://ilab.usc.edu/" target="_blank">iLab</a> (USC), where I work on various Computer Vision tasks.</p>
                   <p> I have also worked with <a href="https://kevincrawfordknight.github.io/" target="_blank">Dr. Kevin Knight</a> in the <a href="http://www.isi.edu/research_groups/nlg/home" target="_blank">Natural Language Group</a> at <a href="http://www.isi.edu/home" target="_blank">Information Sciences Institute</a>.</p>  
@@ -85,7 +85,8 @@
                   <p> Here is my <a href="Resume.pdf" title="Link to My Resume" target="_blank">Resume</a>.
                   <br/>
                   <br/>
-                  <p><b>Publications</b></p>
+                  <p><b>Research Publications and Patents - <a href="https://scholar.google.com/citations?user=jGa34X4AAAAJ&hl=en" title="Google Scholar" target="_blank">Google Scholar</a></b></p>
+                  
                   <ul>
                     <li> "Perfect Accuracy with Human-in-the-Loop Object Detection", (R. Brenner, J. Priyadarshi, L. Itti), European Conference on Computer Vision, 2016</li>
                     <li> "Hafez: an Interactive Poetry Generation System", (M. Ghazvininejad, X. Shi, J. Priyadarshi, K. Knight), ACL, 2017</li>
